force-app/main/default/objects/ApiLog__c/ApiLog__c.object-meta.xml
<CustomObject>
    <label>ApiLog</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>ApiLog Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ApiLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>