force-app/main/default/objects/ApiLog__c/fields/Result_Data__c.field-meta.xml
<CustomField>
    <fullName>Result_Data__c</fullName>
    <label>Result Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>