force-app/main/default/objects/ApiLog__c/fields/Status_code__c.field-meta.xml
<CustomField>
    <fullName>Status_code__c</fullName>
    <label>Status code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>